--- a/sources/sections/04-terms-and-defs.adoc
+++ b/sources/sections/04-terms-and-defs.adoc
@@ -115,7 +115,7 @@ requirement(s) of this requirements class
 
 [NOTE]
 ====
-A direct dependency (of a requirements class) of the current {{requirements class}} will have the same
+A direct dependency (of a requirements class) of the current requirements class will have the same
 {{standardization target}} as the current requirements class. This is another way of saying that the current
 requirements class extends, or uses all the aspects of the direct dependency (of a requirements class).
 Any tests associated with this direct dependency (of a requirements class) can be applied to this requirements class.
@@ -128,13 +128,13 @@ When testing a direct dependency of a requirements class, the standardization ta
 
 {{requirements class}} with a different
 {{standardization target}} which is used, produced or associated to by the
-implementation of this {{requirements class}}
+implementation of this requirements class
 
 [NOTE]
 ====
 In this instance, as opposed to the
 direct dependency of a requirements class, the test against the consumable or product used
-or produced by the {{requirements class}} does not directly test the
+or produced by the requirements class does not directly test the
 requirements class, but tests only its side effects. Hence, a particular
 type of feature service could be required to produce valid XML documents, but
 the test of validity for the XML document is not directly testing the service,
