--- a/sources/sections/06-fundamentals.adoc
+++ b/sources/sections/06-fundamentals.adoc
@@ -67,7 +67,7 @@ However, care must be taken, since the requirements classes may not always in a 
 correspondence to conformance classes in other standards which may be the source of
 requirements for a standard conformant to the ModSpec. If other standards are
 used, their options shall be specified to be useable within a standard conformant to
-this policy, see <<cls-6-5-1>>.
+the ModSpec, see <<cls-6-5-1>>.
 
 Conformance classes may contain dependencies on one another. These are represented by
 tests in one conformance class that state that another conformance class must be
@@ -111,8 +111,7 @@ the numbered Clauses.
 implementation meets the requirements which the tests reference.
 . The tests are organized into some number of conformance "classes" where each conformance class has a one to one relationship with a requirements class. If a standard
 does not do this, it is has by default only one "conformance class".
-. Certificates of conformance (see <<term-all-components-schema-document>>) are
-awarded by a testing entity based on these conformance classes.
+. Certificates of conformance are awarded by a testing entity based on these conformance classes.
 . There is a clear distinction between normative and informative parts of the text.
 . Examples and notes are informative, and do not use "normative"
 language.
