--- a/sources/sections/06-fundamentals.adoc
+++ b/sources/sections/06-fundamentals.adoc
@@ -82,11 +82,11 @@ single requirements class but included in others by reference to its "home"
 requirements class).
 
 In the ModSpec, each conformance requirement is separated in its own labeled
-paragraph, such as seen in <<Requirement 1,req-1>> below.
+paragraph, such as seen in <<req-1,Requirement 1>> below.
 
 The distribution of the information in a standard is not restricted. The only
 requirement is that requirements be grouped in a manner
-consistent with the conformance test classes, see <<Requirement 6,req-6>> and <<Requirement 7,req-7>>. 
+consistent with the conformance test classes, see <<req-6,Requirement 6>> and <<req-7,Requirement 7>>. 
 
 === Documenting the Standard
 
