--- a/sources/ogc-modspec-policy/06-policy.adoc
+++ b/sources/ogc-modspec-policy/06-policy.adoc
@@ -31,3 +31,13 @@ All OGC Standards documents must be written using an official OGC template
 ^| A | All OGC Standards documents _SHALL_ be written using the OGC Member approved template 
 ^| B | This template _SHALL_ be conformant with the requirements stated in the ModSpec
 |===
+
+All OGC Implementation Standards mustl have an Abstract Test Suite. Please note that in the ModSpec, the correct terminology is Conformance Test Suite. However, to be consistent with OGC usage over the last 15 years and to be consistent with the template, the term used is Abstract Test Suite.
+
+[[req-03]]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ003* | */req/policy/document-template* +
+^| A | All OGC Implementation Standards documents _SHALL_ have an Abstract Test Suite (Conformance Test Suite) 
+|===
