--- a/sources/ogc-modspec-policy/document.adoc
+++ b/sources/ogc-modspec-policy/document.adoc
@@ -26,7 +26,7 @@ include::01-scope.adoc[]
 
 include::02-conformance.adoc[]
 
-include::03-norm-refs-adoc[]
+include::03-norm-refs.adoc[]
 
 include::04-terms-and-defs.adoc[]
 
