--- a/sources/sections/01-scope.adoc
+++ b/sources/sections/01-scope.adoc
@@ -19,10 +19,9 @@ There are numerous examples of requirements/conformance classes that can be used
 [[things-to-know]]
 === Understanding the ModSpec
 
-Reading the Terms and Definitions clause and Clause <<cls-4,Terms and Definitions>> will help understanding the content and
-requirements stated in this document.
+Reading the <<cls-4,Terms and Definitions>> clause will help understanding the content and requirements stated in this document.
 
-<<annex-C,Annex C>> defines the UML model upon which the ModSpec is
+Also read Annex C. <<annex-C,Annex C>> defines the UML model upon which the ModSpec is
 based. Annex C also contains informal and non-normative definitions ordered for ease
 of understanding. These two sections can be read first to aid in the understanding of
 the rest of the document.
