--- a/sources/ogc-modspec-policy/00-preface.adoc
+++ b/sources/ogc-modspec-policy/00-preface.adoc
@@ -1,7 +1,7 @@
 [.preface]
-== Preface
+== Abstract
 
-This OGC member Policy mandates the use if the ModSpec a model and related requirements and recommendations for writing and structuring modular OGC standards Further, this Policy mandates that every OGC Implementation Standard will provide an Abstract Test Suite (conformance suite)  designed to enable the consistent and verifiable testing of implementations of an OGC Standard that claim conformance.
+This OGC ModSpec Policy specifies requirements and guidance for using the OGC ModSpec as the formal structure for all OGC standards documents. This OGC member Policy mandates using the ModSpec model and related requirements and recommendations for writing and structuring modular OGC standards Further, this Policy mandates that every OGC Implementation Standard will provide an Abstract Test Suite (conformance suite)  designed to enable the consistent and verifiable testing of implementations of an OGC Standard that claim conformance.
 
 For OGC Standards work, the word “standard” in the ModSpec applies to all OGC draft standards, approved standards, draft Abstract Specifications, and approved Abstract Specifications. The exceptions are OGC Abstract Specifications that originate in ISO or Community Standards that are developed external to the OGC and then submitted to the OGC.
 
@@ -10,15 +10,6 @@ The goal of this Policy is to ensure that a standard specifies requirements in a
 Suggested additions, changes, and comments on this this document are welcome and
 encouraged. Such suggestions may be submitted through the OGC Change Request System
 (http://www.opengeospatial.org/standards/cr) or by creating an issue in the GitHub repository for this document (https://github.com/opengeospatial/ogc-modspec).
-
-[.preface]
-== Document terms and definitions
-
-This document uses the standard terms defined in Subclause 5.3 of [OGC 05-008], which
-is based on the ISO/IEC Directives, Part 2. Rules for the structure and drafting of
-International Standards. In particular, the word "shall" (not "must") is the
-imperative verb form used to indicate a requirement to be strictly followed to
-conform to this standard.
 
 [.preface]
 == Document editors
