--- a/sources/release-notes-1-1/sections/00-preface.adoc
+++ b/sources/release-notes-1-1/sections/00-preface.adoc
@@ -1,6 +1,6 @@
 .Preface
 
-This document provides the set of revision notes for the OGC Modular Standard (Core, Part1, and Part2), version 1.31[OGC <document number>]> and does not modify that standard.
+This document provides the set of revision notes for the OGC ModSpec Standard (Core, Part1, and Part2), version 1.31[OGC <document number>]> and does not modify that standard.
 
 This document provides the details of edits, deficiency corrections, and enhancements of the above-referenced standard. It also documents those items that have been deprecated. Finally, this document provides implementations details related to issues of backwards compatibility.
 
@@ -12,4 +12,9 @@ Recipients of this document are requested to submit, with their comments, notifi
 [abstract]
 == Abstract
 
-<Insert Abstract Text here>
+This OGC ModSpec Policy specifies requirements and guidance for using the OGC ModSpec Standard as the formal structure for all OGC standards documents. 
+
+For OGC Standards work, the word “standard” in the ModSpec applies to all OGC draft standards, approved standards, draft Abstract Specifications, and approved Abstract Specifications. The exceptions are OGC Abstract Specifications that originate in ISO or Community Standards that are developed external to the OGC and then submitted to the OGC.
+
+The goal of this Policy is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
+
