--- a/sources/release-notes-1-1/sections/00-preface.adoc
+++ b/sources/release-notes-1-1/sections/00-preface.adoc
@@ -1,6 +1,6 @@
 .Preface
 
-This document provides the set of revision notes for the OGC ModSpec Standard (Core, Part1, and Part2), version 1.31[OGC <document number>]> and does not modify that standard.
+This document provides the set of revision notes for the OGC ModSpec: Core Standard (including Part1, and Part2), version 1.1[OGC <document number>]> and does not modify that standard.
 
 This document provides the details of edits, deficiency corrections, and enhancements of the above-referenced standard. It also documents those items that have been deprecated. Finally, this document provides implementations details related to issues of backwards compatibility.
 
@@ -12,7 +12,11 @@ Recipients of this document are requested to submit, with their comments, notifi
 [abstract]
 == Abstract
 
-This OGC ModSpec Policy specifies requirements and guidance for using the OGC ModSpec Standard as the formal structure for all OGC standards documents. 
+The OGC `ModSpec`, defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
+
+The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
+
+NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
 
 For OGC Standards work, the word “standard” in the ModSpec applies to all OGC draft standards, approved standards, draft Abstract Specifications, and approved Abstract Specifications. The exceptions are OGC Abstract Specifications that originate in ISO or Community Standards that are developed external to the OGC and then submitted to the OGC.
 
