--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -43,6 +43,7 @@ See <<Clause_Critical>> for more information on critical changes and
 | Other | NA  | A | All sections | Use ModSpec as name | Backwards use, easy to use and say.
 | GitHub| 38  | A | All sections | Added bookmarks and anchors | Ease of navigation.
 | GitHub| 8  | A | Preface | Rewrote Preface  | Clarity and shorten document
+| GitHub| 17, 18, 20  | A | Future Work | Update Future Work based on Git issues  | Added new future work items for JSON and RDFS, SHACL, and OWL to state requirements.
 | GitHub| 12 | A | Preface | Rewrote Foreward | Clarity and shorten document
 | Other | NA  | A | Scope 1.0 | Rewrote Scope | Clarity and shorten document
 | Other | NA  | A | New Clause 1.0 | Add Clause `Understanding the ModSpec` | Provide guidance to reader 
