--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -63,4 +63,5 @@ See <<Clause_Critical>> for more information on critical changes and
 | GitHub| 14, 33, 44  | A | Fundamentals | Add 7.2.  Standardization Context — Goals and Targets | Clarity and required for OGC wide usage and Common understanding.
 | GitHub| 14, 33  | A | Fundamentals | Added concept of a `standardization goal` | Need this requirement so every standard tells the reader what the goal or aim of the standard is.
 | Other | NA  | A | Fundamentals | 7.3. Conformance, Requirements, and key information  | Moved content from just after Requirement 2, ModSpec version 1 to new location.
+| Other | NA  | A | Conventions | 8.1. Using the model | Removed confusing paragraphs after Figure 1 - no impact.
 |=======================================================================
