--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -50,7 +50,7 @@ See <<Clause_Critical>> for more information on critical changes and
 | Other | NA  | A | New Clause 1.0 | Add Clause `ModSpec document structure` | Provide guidance to reader
 | GitHub| 13  | A | Introduction | Rewrote Introduction | Clarity and shorten
 | GitHub| 8, 12, 13  | A | Conformance | Rewrote and modified | Clarity, shorten and be consistent with Git issues 8, 12, and 13
-| Other | NA  | A | References | Updated dates | Provide references to most recent versions of each of the referenced standards.
+| GitHub | 15  | A | References | Updated dates | Provide references to most recent versions of each of the referenced standards.
 | GitHub| 45  | A | Terms & Defs | Added `building block` | Needed concept `building block` definition for OGC wide use.
 | GitHub| 34  | A | Terms & Defs | Added `permission` | Was a note but should be a separate T&D
 | Other| NA  | A | Terms & Defs | Added `will` | Defined in old ModSpec body but should be a separate T&D
@@ -64,5 +64,5 @@ See <<Clause_Critical>> for more information on critical changes and
 | GitHub| 14, 33  | A | Fundamentals | Added concept of a `standardization goal` | Need this requirement so every standard tells the reader what the goal or aim of the standard is.
 | Other | NA  | A | 7.3. Conformance, Requirements, and key information | Moved content from just after Requirement 2, ModSpec version 1 to new locatio  | Clarity
 | Other | NA  | A | 8.1. Using the model | Removed confusing paragraphs after Figure 1 - no impact. | Clarity
-| Other | NA  | A | 8.2.  The “standards” document | Removed confusing paragraphs after Req 7 and before Clause 8.3 | Clarity and shorten document.
+| GitHub | 32 | A | 8.2.  The “standards” document | Removed confusing paragraphs after Req 7 and before Clause 8.3 | Clarity and shorten document.
 |=======================================================================
