--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -32,3 +32,16 @@ This is GitHub issue 34.
 
 === Clarification and consistent use of `specification` and `standard`
 
+In the ModSpec Version 1.0 there is a short paragraph:
+
+`In this standard, other documents which may be standards but are being tested for conformance to this standard are referred to as “specifications.” The purpose of this linguistic artifact is to prevent confusion between this standard and the standardization targets of its requirements.`
+
+There were two maun issues with this statement:
+
+- The statement is confusing and to an extent artificial;
+- This "artifact" was not consistently applied in Version 1. The editors went back and forth and often, despite the rule, intermixed the terms causes confusion.
+
+In Version 1.1 of the ModSpec, by no longer referring to the ModSpec as a Policy, we can instead refer to the ModSpec as Standard for writing modular standards. Further, we can reference documents that will become standards as standards or draft standard. Finally, the ModSpec document itself is refered to as the ModSpec and not a policy or standard.
+
+This change, applied to the entire document, removes the ambiguity. The change was applied consistently throughout Version 1.1. 
+- 
