--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -65,4 +65,8 @@ See <<Clause_Critical>> for more information on critical changes and
 | Other | NA  | A | 7.3. Conformance, Requirements, and key information | Moved content from just after Requirement 2, ModSpec version 1 to new locatio  | Clarity
 | Other | NA  | A | 8.1. Using the model | Removed confusing paragraphs after Figure 1 - no impact. | Clarity
 | GitHub | 32 | A | 8.2.  The “standards” document | Removed confusing paragraphs after Req 7 and before Clause 8.3 | Clarity and shorten document.
+| Other | NA  | A | Requirement 14 | Removed Einstein reference - no impact. | Clarity
+| Other | NA  | A | Annex B | Re-wrote content to be consistent with Version 1.1 | Consistency
+| GitHub| 10  | A | Annex C - ogc-modspec.lutaml | Rewrote Specification/Standard description to be consistent with Critical Change 4
+| Other | NA  | A | Bibliography | Update dates for documents | Consistency
 |=======================================================================
