--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -1,11 +1,11 @@
 [[Clause_Critical]]
 == Description of critical changes
 
-There are four (3) critical changes in the ModSpec: Core Standard. None of these chnages affect backwards compatibility.
+There are five (5) critical changes in the ModSpec: Core Standard. None of these chnages affect backwards compatibility.
 
 === Critcal Change 1: ModSpec 1.1 is not OGC Policy. 
 
-The decision was made to not have the OGC ModSpec: Core as an OGC Policy Document. The reason is that the ModSpec should be useable by and Standards organization and not just the OGC. Instead:
+The decision was made to not have the OGC ModSpec: Core document itself as an OGC Policy Document. The reason is that the ModSpec should be useable by and Standards organization and not just the OGC. Instead:
 
 - The ModSpec document itself is now an OGC Standard.
 - A separate document titled, https://portal.ogc.org/files/?artifact_id=110275&version=1[The ModSpec Model: OGC Policy] was developed. This Policy will be reviewed, discussed, and approved as an OGC Policy document
