--- a/sources/release-notes-1-1/sections/00-preface.adoc
+++ b/sources/release-notes-1-1/sections/00-preface.adoc
@@ -1,8 +1,8 @@
 .Preface
 
-This document provides the set of revision notes for the OGC ModSpec: Core Standard (including Part1, and Part2), version 1.1[OGC <document number>]> and does not modify that standard.
+This document provides the set of release notes for the OGC ModSpec: Core Standard (including Part1, and Part2), version 1.1[OGC 25-003]> and does not modify that Standard.
 
-This document provides the details of edits, deficiency corrections, and enhancements of the above-referenced standard. It also documents those items that have been deprecated. Finally, this document provides implementations details related to issues of backwards compatibility.
+This document provides the details of edits, deficiency corrections, and enhancements of the above-referenced Standard. It also documents those items that have been deprecated. Finally, this document provides implementations details related to issues of backwards compatibility.
 
 Attention is drawn to the possibility that some of the elements of this document may be the subject of patent rights. The Open Geospatial Consortium shall not be held responsible for identifying any or all such patent rights.
 
@@ -12,7 +12,7 @@ Recipients of this document are requested to submit, with their comments, notifi
 [abstract]
 == Abstract
 
-The OGC `ModSpec`, defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
+The OGC `ModSpec` defines a model and related requirements and recommendations for writing and structuring modular standards documents. Further, this model is designed to enable the consistent and verifiable testing of implementations of a standard that claim conformance.
 
 The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
