--- a/sources/release-notes-1-1/sections/clause-5-critical.adoc
+++ b/sources/release-notes-1-1/sections/clause-5-critical.adoc
@@ -26,7 +26,7 @@ This is GitHub issue 36.
 
 === Critical Change 3: ModSpec Permissions and Recommendations clearly identified
 
-In the ModSpec version 1.0, permissions and recommendations were embedded in the general text and were not specifically highlighted. Further. the concept permission was not defined. In the ModSpec version 1.1, the concept `permission` is defined. Further, all permissions and recommendation are extracted from the general text and placed in tablesas per the Metanorma template. Further, all permissions and recommendations are bookmarked for easier navigation.
+In the ModSpec version 1.0, permissions and recommendations were embedded in the general text and were not specifically highlighted. Further. the concept permission was not defined. In the ModSpec version 1.1, the concept `permission` is defined. Further, all permissions and recommendation are extracted from the general text and placed in tables as per the Metanorma template. Further, all permissions and recommendations are bookmarked for easier navigation.
 
 This is GitHub issue 34.
 
@@ -36,12 +36,12 @@ In the ModSpec Version 1.0 there is a short paragraph:
 
 `In this standard, other documents which may be standards but are being tested for conformance to this standard are referred to as “specifications.” The purpose of this linguistic artifact is to prevent confusion between this standard and the standardization targets of its requirements.`
 
-There were two maun issues with this statement:
+There were two main issues with this statement:
 
 - The statement is confusing and to an extent artificial;
 - This "artifact" was not consistently applied in Version 1. The editors went back and forth and often, despite the rule, intermixed the terms causes confusion.
 
-In Version 1.1 of the ModSpec, by no longer referring to the ModSpec as a Policy, we can instead refer to the ModSpec as Standard for writing modular standards. Further, we can reference documents that will become standards as standards or draft standard. Finally, the ModSpec document itself is refered to as the ModSpec and not a policy or standard.
+In Version 1.1 of the ModSpec, by no longer referring to the ModSpec as a Policy, we can instead refer to the ModSpec as Standard for writing modular standards. Further, we can reference documents that will become standards as standards or draft standard. Finally, the ModSpec document itself is referred to as the ModSpec and not a policy or standard.
 
 This change, applied to the entire document, removes the ambiguity. The change was applied consistently throughout Version 1.1. 
 
