--- a/sources/release-notes-1-1/sections/clause-4-change-log.adoc
+++ b/sources/release-notes-1-1/sections/clause-4-change-log.adoc
@@ -44,7 +44,7 @@ See <<Clause_Critical>> for more information on critical changes and
 | GitHub| 38  | A | All sections | Added bookmarks and anchors | Ease of navigation.
 | GitHub| 8  | A | Preface | Rewrote Preface  | Clarity and shorten document
 | GitHub| 17, 18, 20  | A | Future Work | Update Future Work based on Git issues  | Added new future work items for JSON and RDFS, SHACL, and OWL to state requirements.
-| GitHub| 12 | A | Preface | Rewrote Foreward | Clarity and shorten document
+| GitHub| 12 | A | Preface | Rewrote Forward | Clarity and shorten document
 | Other | NA  | A | Scope 1.0 | Rewrote Scope | Clarity and shorten document
 | Other | NA  | A | New Clause 1.0 | Add Clause `Understanding the ModSpec` | Provide guidance to reader 
 | Other | NA  | A | New Clause 1.0 | Add Clause `ModSpec document structure` | Provide guidance to reader
@@ -62,7 +62,7 @@ See <<Clause_Critical>> for more information on critical changes and
 | GitHub| 45  | A | Fundamentals | Add description of concept Building Block | Clarity and required for OGC wide usage and Common understanding.
 | GitHub| 14, 33, 44  | A | Fundamentals | Add 7.2.  Standardization Context — Goals and Targets | Clarity and required for OGC wide usage and Common understanding.
 | GitHub| 14, 33  | A | Fundamentals | Added concept of a `standardization goal` | Need this requirement so every standard tells the reader what the goal or aim of the standard is.
-| Other | NA  | A | 7.3. Conformance, Requirements, and key information | Moved content from just after Requirement 2, ModSpec version 1 to new locatio  | Clarity
+| Other | NA  | A | 7.3. Conformance, Requirements, and key information | Moved content from just after Requirement 2, ModSpec version 1 to new location  | Clarity
 | Other | NA  | A | 8.1. Using the model | Removed confusing paragraphs after Figure 1 - no impact. | Clarity
 | GitHub | 32 | A | 8.2.  The “standards” document | Removed confusing paragraphs after Req 7 and before Clause 8.3 | Clarity and shorten document.
 | Other | NA  | A | Requirement 14 | Removed Einstein reference - no impact. | Clarity
